deuxième sauvegarde avec CSS

--- a/profile-card-1.html
+++ b/profile-card-1.html
@@ -7,14 +7,16 @@
     <title>Profile-card</title>
 
     <body>
+    <main>
+    <div class="corps">
       <!--Première icone en haut à gauche-->
-      <img src="bitmoji1.webp" alt="Bitmoji de moi">
-      <h1>Nour Everaert</h1>
-      <h2>Web Developer</h2>
-      <section>
-        <p>A child starting out in web development. Usually takes too much time to think about the design.</p>
+            <img class="moi" src="bitmoji3.webp" alt="Bitmoji de moi">
+        <section>
+            <h1>Nour Everaert</h1>
+          <h2>Web Developer</h2>
+            <p>A child starting out in web development. Usually takes too much time to think about the design.</p>
       </section>
-      <a href="mailto:nour.everaert.prof@gmail.com">nour.everaert.prof@gmail.com</a>
+            <a class="mail" href="mailto:nour.everaert.prof@gmail.com">nour.everaert.prof@gmail.com</a>
       <footer>
         <!--Pleins d'icones de liens-->
         <a href="https://twitter.com/?lang=fr" target="_blank"><img src="twitter (1).png" alt="logo de Twitter"></a>
@@ -23,4 +25,7 @@
         <a href="https://github.com/NourEve" target="_blank"><img src="github.png" alt="logo de GitHub'"></a>
         <img src="dev.png" alt="icone dev">
       </footer>
+    </div>
+    </main>
     </body>
+    </html>
