--- a/profile-card-1.html
+++ b/profile-card-1.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="A site created to discover html and CSS during the BeCode training.">
+    <meta name="viewport" content="width=500, initial-scale=1">
+    <meta name="description" content="Création d'une profile-card.">
     <link rel="stylesheet" href="profile-card-1.css">
     <title>Profile-card</title>
 
@@ -19,11 +21,11 @@
             <a class="mail" href="mailto:nour.everaert.prof@gmail.com">nour.everaert.prof@gmail.com</a>
       <footer>
         <!--Pleins d'icones de liens-->
-        <a href="https://twitter.com/?lang=fr" target="_blank"><img src="twitter (1).png" alt="logo de Twitter"></a>
-        <a href="https://www.instagram.com/nour.eve/?hl=fr" target="_blank"><img src="instagram (2).png" alt="logo d'instagram'"></a>
-        <a href="https://www.linkedin.com/feed/" target="_blank"><img src="linkedin.png" alt="logo de linkedin'"></a>
-        <a href="https://github.com/NourEve" target="_blank"><img src="github.png" alt="logo de GitHub'"></a>
-        <img src="dev.png" alt="icone dev">
+        <a href="https://twitter.com/?lang=fr" target="_blank"><img src="twitter.webp" alt="logo de Twitter"></a>
+        <a href="https://www.instagram.com/nour.eve/?hl=fr" target="_blank"><img src="instagram.webp" alt="logo d'instagram'"></a>
+        <a href="https://www.linkedin.com/feed/" target="_blank"><img src="linkedin.webp" alt="logo de linkedin'"></a>
+        <a href="https://github.com/NourEve" target="_blank"><img src="github.webp" alt="logo de GitHub'"></a>
+        <img src="dev.webp" alt="icone dev">
       </footer>
     </div>
     </main>
