--- a/Essai greed/profile-card-1-essai-greed.html
+++ b/Essai greed/profile-card-1-essai-greed.html
@@ -5,7 +5,7 @@
     <meta name="description" content="A site created to discover html and CSS during the BeCode training.">
     <meta name="viewport" content="width=500, initial-scale=1">
     <meta name="description" content="Création d'une profile-card.">
-    <link rel="stylesheet" href="profile-card-1.css">
+    <link rel="stylesheet" href="profile-card-1-essai-grid.css">
     <title>Profile-card</title>
 
     <body>
